--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     <a href="https://instagram.com/hxrshhh.y"><i class='bx bxl-instagram'></i></a>
                     <a href="https://x.com/YadavHarshhh"><i class='bx bxl-twitter'></i></a>
                     <a href="https://www.linkedin.com/in/hxrshy/"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/YadavHarshhh"><i class='<i class='bx bxl-github'></i>'></i></a>
                     </div>
 
                 </div>
